--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="Fzc6F6dcq-qUlZUmedKZu4EifEwnVuM5FCwfr45Wmtw" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="What Is an Electrical Inspection, and Why Is It Important?">
@@ -130,7 +131,7 @@
 
         <div class="section">
             <h2>The Role of Electrical Inspections in Safety</h2>
-            <p>Inspections help prevent<strong><a href="https://maps.app.goo.gl/mEfhpViDcmmkfto8A"> Electrician in Cheyenne WY</a></strong> electrical hazards like fires and shocks by detecting faulty wiring, overloaded circuits, and outdated panels. A proper electrical wiring installation</strong> ensures system safety.</p>
+            <p>Inspections help prevent<strong><a href="https://robrt-parker1.github.io/electrical-services/"> Electrician in Cheyenne WY</a></strong> electrical hazards like fires and shocks by detecting faulty wiring, overloaded circuits, and outdated panels. A proper electrical wiring installation</strong> ensures system safety.</p>
         </div>
 
         <div class="section">
